test/skyline-k8s/skyline-ingress-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyline-ingress
  namespace: skyline
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - host: www.greenbespinglobal.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skyline-service
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skyline-service
            port:
              number: 80
